--- a/aws-bucket-crawl/docker-compose.yml
+++ b/aws-bucket-crawl/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - .:/app
     command: python3 -m pytest
   run:
-    image: "exercise-3"
+    image: "bucket-crawl"
     volumes:
       - .:/app
     command: python3 main.py
